# snake

./: .gitignore  CMakeLists.txt  README.en.md  README.md  bootstrap.bat  make.bat  startup.bat
include/: food.h  game.h
include/snake/: body.h  food.h  head.h  node.h  snake.h
src/: CMakeLists.txt  Game.hpp  Model.hpp  Snake.cpp  Snake.hpp  controller.cpp  draw.cpp  food.cpp  game.cpp  main.cpp
src/easyx/: Easyx.hpp  Graphics.hpp
src/snake/: body.cpp  food.cpp  head.cpp  snake.cpp
